--- a/MoviesAbout.html
+++ b/MoviesAbout.html
@@ -18,6 +18,10 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/d0f4b1310a.js"
+      crossorigin="anonymous"
+    ></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link
@@ -111,7 +115,7 @@
                 >love</span
               >
             </div>
-            <h3 class="fs-2 fw-bold h mt-2" k>About</h3>
+            <h3 class="fs-2 fw-bold ab mt-2" >About</h3>
             <p class="h">
                 Aladdin is a 2019 American musical fantasy film directed by Guy Ritchie from a screenplay he co-wrote with John August. Coproduced by Walt Disney Pictures and Rideback, it is a live-action adaptation of Disney's 1992 animated film Aladdin, itself based on "Aladdin and the Wonderful Lamp", a French addition to the Middle Eastern folktale collection One Thousand and One Nights.[1][a] The film stars Will Smith, Mena Massoud, Naomi Scott, Marwan Kenzari, Navid Negahban, Nasim Pedrad, and Billy Magnussen. The plot follows Aladdin, a street urchin, as he falls in love with Princess Jasmine, befriends a wish-granting genie, and battles the wicked sorcerer Jafar.
 
@@ -121,8 +125,8 @@
             <div class="my-5 l"  style="height: 250px">
               <h3 class="fs-2 fw-bold h">Watch Trailer</h3>
               <iframe
-                width="560"
-                height="315"
+              height="140%"
+              width="100%"
                 src="https://www.youtube.com/embed/-G5XI61Y9ms?si=qgKmVGp4SvamG1cf"
                 title="YouTube video player"
                 frameborder="0"
@@ -221,6 +225,33 @@
   
       
       </div>
+      <footer>
+        <div class="footer-content">
+          <h3>MoviesHub</h3>
+          <p>
+            Stop searching for free movie websites and watch MoviesHub. <br />
+            Watch Free Movies With MoviesHub.
+          </p>
+          <ul class="socials">
+            <li>
+              <a href="#"><i class="fa fa-facebook"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-twitter"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-google-plus"></i></a>
+            </li>
+            <li>
+              <a href="#"><i class="fa fa-linkedin square"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-bottom">
+          <p>copyright &copy; 2024 MoviesHub</p>
+        </div>
+      </footer>
+
   <script>
     AOS.init();
   </script>
