--- a/favorites.html
+++ b/favorites.html
@@ -64,34 +64,10 @@
     </nav>
 
     <hr />
-    <div id="movie-container" class="movie-container"></div>
-    <div class="movie-container">
-      <div data-aos="flip-right" class="posters">
-        <a href="MoviesAbout.html"
-          ><img src="./imgs/poster1.jpg" alt="" width="300px" height="393"
-        /></a>
-      </div>
-      <div data-aos="flip-right" class="posters">
-        <a href="MoviesAbout.html"
-          ><img src="./imgs/poster2.jpg" alt="" width="300px" height="393"
-        /></a>
-      </div>
-      <div data-aos="flip-right" class="posters">
-        <a href="MoviesAbout.html"
-          ><img src="./imgs/poster3.jpg" alt="" width="300px" height="393"
-        /></a>
-      </div>
-      <div data-aos="flip-right" class="posters">
-        <a href="MoviesAbout.html"
-          ><img src="./imgs/poster4.jpg" alt="" width="300px" height="393"
-        /></a>
-      </div>
-      <div data-aos="flip-right" class="posters">
-        <a href="MoviesAbout.html"
-          ><img src="./imgs/poster6.jpg" alt="" width="300px" height="393"
-        /></a>
-      </div>
+    <div id="movieContainer" class="movie-container">
+        <div style="display: flex; justify-content: center; justify-items: center; height: 60vh;">nothing</div>
     </div>
+    
 
     <footer>
       <div class="footer-content">
@@ -123,6 +99,6 @@
     <script>
       AOS.init();
     </script>
-    <script src="/script.js"></script>
+    <script src="/favorites.js"></script>
   </body>
 </html>
