--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
           Watch Free Movies With MoviesHub.
         </h1>
         <br />
-        <h3 class="h1">
+        <h2 class="h1">
           Stop searching for free movie websites and watch MoviesHub.
-        </h3>
+        </h2>
         <br />
         <a href="./movies.html">
           <button class="button" role="button">Browse</button>
@@ -104,8 +104,6 @@
       </div>
     </section>
     <div class="movie-container" id="movie-container"></div>
-    <!-- card -->
-    <!-- 2 -->
     <section>
       <div class="container-fluid align-items-center p-5">
         <div class="d-flex flex-column py-5">
@@ -276,7 +274,42 @@
         </div>
       </div>
     </section>
-  
+    <hr>
+    <!-- card -->
+    <div class="card" style="width: 18rem;">
+      <div class="card-body">
+        <h5 class="card-title">Special title treatment</h5>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+<!-- footer -->
+    <footer>
+      <div class="footer-content">
+        <h3>MoviesHub</h3>
+        <p>
+          Stop searching for free movie websites and watch MoviesHub. <br />
+          Watch Free Movies With MoviesHub.
+        </p>
+        <ul class="socials">
+          <li>
+            <a href="#"><i class="fa fa-facebook"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-google-plus"></i></a>
+          </li>
+          <li>
+            <a href="#"><i class="fa fa-linkedin square"></i></a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <p>copyright &copy; 2024 MoviesHub</p>
+      </div>
+    </footer>
 
     <script>
       AOS.init();
