--- a/MoviesAbout.html
+++ b/MoviesAbout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoviesHub</title>
+    <link rel="icon" type="image/x-icon" href="/imgs/logo.png">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -30,12 +31,12 @@
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
-    <!-- Option 1: Include in HTML -->
+ 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
     />
-    <!-- Font -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,7 +50,7 @@
   <body class="BG">
     <nav class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navname" href="index.html">MoviesHub </a>
+        <a class="navname" href="index.html">MoviesHub</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -64,20 +65,27 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
+              <h4><a class="nav-link" href="./favorites.html"> <b> Favorites</b></a></h4>
+            </li>
+            <li class="nav-item">
               <h4>
-                <a class="nav-link active " href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html" > <b> Home</b></a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link " href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link" href="./movies.html"> <b>Movies</b></a></h4>
             </li>
+          </li>
+         
           </ul>
           <form class="d-flex" role="search">
             <input
+              id="searchmovie"
               class="form-control me-2"
-              type="search"
+              type="text"
               placeholder="Search"
               aria-label="Search"
+              onchange="fetchMovies()"
             />
           </form>
         </div>
