--- a/favorites.html
+++ b/favorites.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MoviesHub</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" type="image/x-icon" href="/imgs/logo.png">    <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -26,7 +26,7 @@
   <body class="bg2">
     <nav class="navbar sticky-top navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navname" href="index.html">MoviesHub </a>
+        <a class="navname" href="index.html">MoviesHub</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -41,13 +41,18 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
+              <h4><a class="nav-link" href="./favorites.html"> <b> Favorites</b></a></h4>
+            </li>
+            <li class="nav-item">
               <h4>
-                <a class="nav-link active" href="./index.html">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html" > <b> Home</b></a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link" href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link" href="./movies.html"> <b>Movies</b></a></h4>
             </li>
+          </li>
+         
           </ul>
           <form class="d-flex" role="search">
             <input
