--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MoviesHub</title>
+    <link rel="icon" type="image/x-icon" href="/imgs/logo.png">
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -54,13 +55,18 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
           <ul class="navbar-nav m-auto mb-2 mb-lg-0">
             <li class="nav-item">
+              <h4><a class="nav-link" href="./favorites.html"> <b> Favorites</b></a></h4>
+            </li>
+            <li class="nav-item">
               <h4>
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="#" > <b> Home</b></a>
               </h4>
             </li>
             <li class="nav-item">
-              <h4><a class="nav-link" href="./movies.html">Movies</a></h4>
+              <h4><a class="nav-link" href="./movies.html"> <b>Movies</b></a></h4>
             </li>
+          </li>
+         
           </ul>
           <form class="d-flex" role="search">
             <input
@@ -275,14 +281,7 @@
       </div>
     </section>
     <hr>
-    <!-- card -->
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">Special title treatment</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
-      </div>
-    </div>
+  
 <!-- footer -->
     <footer>
       <div class="footer-content">
